--- a/app/src/main/res/layout/fragment_entry.xml
+++ b/app/src/main/res/layout/fragment_entry.xml
@@ -5,55 +5,61 @@
     android:layout_height="match_parent"
     tools:context=".entryFragment"
     android:orientation="vertical"
-    android:background="@drawable/background1" >
+    android:background="@drawable/background4" >
 
     <ImageView
-        android:layout_width="349dp"
-        android:layout_height="287dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:src="@drawable/logo1"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="40dp" />
 
     <Button
         android:id="@+id/button_cocktail_EF"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="30dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="40dp"
         android:alpha="0.8"
         android:background="@drawable/button_home_page"
         android:fontFamily="serif"
         android:text="cocktails"
-        android:textColor="#F46335"
+        android:textColor="@color/white"
+        android:drawableStart="@drawable/ic_baseline_wine_bar_24"
+        android:padding="10dp"
 
 
-        android:textSize="24sp" />
+
+
+
+
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/button_signUp_EF"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginRight="40dp"
         android:alpha="0.8"
         android:background="@drawable/button_home_page"
         android:fontFamily="serif"
         android:text="sign-up"
-        android:textColor="#EDBA3B"
+        android:textColor="@color/white"
 
 
-        android:textSize="24sp" />
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/button_signIn_EF"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginRight="40dp"
         android:alpha="0.8"
         android:background="@drawable/button_home_page"
         android:fontFamily="serif"
@@ -61,5 +67,5 @@
         android:textColor="#F3ECDD"
 
 
-        android:textSize="24sp" />
+        android:textSize="20sp" />
 </LinearLayout>
