--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".loginFragment"
-    android:background="@drawable/background2"
+    android:background="@drawable/background3"
     android:orientation="vertical"
     >
 
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="_______SIGN-IN_______"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="250dp"
         android:textSize="24sp"
         android:gravity="center"/>
 
@@ -47,6 +47,15 @@
         android:drawableStart="@drawable/ic_baseline_lock_24"
         android:drawablePadding="20dp"
         />
+
+    <Button
+        android:id="@+id/button_login_FL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_home_page"
+        android:layout_margin="15dp"
+        android:text="login"
+        android:alpha="0.75"/>
 
 
 </LinearLayout>
