--- a/app/src/main/res/layout/card_home_fragment_layout.xml
+++ b/app/src/main/res/layout/card_home_fragment_layout.xml
@@ -6,12 +6,11 @@
 
     app:cardUseCompatPadding="true"
     app:cardCornerRadius="15dp"
-    android:id="@+id/card_view"
-    android:layout_marginTop="10dp">
+    android:id="@+id/card_view">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="70dp"
         android:orientation="horizontal"
         android:background="#CCC8C8"
 
@@ -20,7 +19,7 @@
 
         <ImageView
             android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_height="70dp"
             android:src="@mipmap/ic_launcher"
             android:id="@+id/cocktail_image"/>
 
@@ -30,9 +29,7 @@
             android:orientation="vertical"
             android:layout_marginLeft="10dp"
             android:gravity="center"
-            android:paddingLeft="10dp"
-
-            >
+            android:paddingLeft="10dp">
 
 
             <TextView
@@ -48,10 +45,8 @@
                 android:id="@+id/cocktail_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-
                 android:text="C_Native Name"
-                android:textSize="20sp"
+                android:textSize="14sp"
                 android:textColor="#807D7D"/>
 
 
