--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,13 +2,69 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/background4"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     tools:context=".profileFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:padding="20dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Profile"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="20sp"/>
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.AppCompat.Button.Borderless"
+            app:icon="@drawable/ic_baseline_account_circle_24"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:id="@+id/my_games_btn"
+            android:text="Log in or account name"
+            android:textAllCaps="false"
+            android:gravity="center|start"
+            app:iconTint="@color/teal_700"
+            android:textColor="@color/teal_700"
+            android:textSize="14sp"/>
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.AppCompat.Button.Borderless"
+            app:icon="@drawable/ic_baseline_logout_24"
+            android:layout_height="match_parent"
+            android:id="@+id/friends_btn"
+            android:layout_width="match_parent"
+            android:text="Log Out"
+            android:textAllCaps="false"
+            android:gravity="center|start"
+            app:iconTint="@color/red"
+            android:textColor="@color/red"
+            android:textSize="14sp"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="About"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="20sp"/>
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.AppCompat.Button.Borderless"
+            app:icon="@drawable/ic_baseline_chat_24"
+            android:textStyle="italic"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:id="@+id/terms_and_condition_btn"
+            android:text="Terms and Conditions"
+            android:textAllCaps="false"
+            android:gravity="center|start"
+            app:iconTint="@color/teal_700"
+            android:textColor="@color/teal_700"
+            android:textSize="14sp"
+            />
+    </LinearLayout>
 
 </FrameLayout>
