added read, and the info is showing in profile settings

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -24,7 +24,7 @@
             app:icon="@drawable/ic_baseline_account_circle_24"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:id="@+id/my_games_btn"
+            android:id="@+id/profile_btn_profile"
             android:text="Log in or account name"
             android:textAllCaps="false"
             android:gravity="center|start"
@@ -35,7 +35,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             app:icon="@drawable/ic_baseline_logout_24"
             android:layout_height="match_parent"
-            android:id="@+id/friends_btn"
+            android:id="@+id/log_out_btn_profile"
             android:layout_width="match_parent"
             android:text="Log Out"
             android:textAllCaps="false"
@@ -57,7 +57,7 @@
             android:textStyle="italic"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:id="@+id/terms_and_condition_btn"
+            android:id="@+id/terms_and_condition_btn_profile"
             android:text="Terms and Conditions"
             android:textAllCaps="false"
             android:gravity="center|start"
