--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="250dp"
+        android:textColor="@color/white"
         android:layout_marginRight="10dp"
         android:ems="10"
         android:hint="Email"
@@ -31,6 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:textColor="@color/white"
         android:inputType="textPassword"
         android:minHeight="48dp"
         android:layout_margin="10dp"
@@ -44,6 +46,7 @@
     <EditText
         android:id="@+id/editTextPhone"
         android:layout_width="match_parent"
+        android:textColor="@color/white"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="phone"
@@ -52,12 +55,13 @@
         android:textColorHint="@color/white"
         android:drawableStart="@drawable/ic_baseline_phone_24"
         android:drawablePadding="20dp"
-        android:hint="Phon Number"
+        android:hint="Phone Number"
         />
 
     <EditText
         android:id="@+id/editTextTextPersonName"
         android:layout_width="match_parent"
+        android:textColor="@color/white"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
@@ -73,6 +77,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:textColor="@color/white"
         android:inputType="textPersonName"
         android:hint="Last-Name"
         android:textColorHint="@color/white"
