--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -16,7 +16,8 @@
         android:text="_______SIGN-IN_______"
         android:layout_marginTop="250dp"
         android:textSize="24sp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:textColor="@color/white"/>
 
 
     <EditText
@@ -31,6 +32,7 @@
         android:inputType="textEmailAddress"
         android:textColorHint="@color/white"
         android:minHeight="48dp"
+        android:textColor="@color/white"
         />
 
     <EditText
@@ -46,6 +48,7 @@
 
         android:drawableStart="@drawable/ic_baseline_lock_24"
         android:drawablePadding="20dp"
+        android:textColor="@color/white"
         />
 
     <Button
