Changing profile data works

--- a/app/src/main/res/layout/fragment_profile_settings.xml
+++ b/app/src/main/res/layout/fragment_profile_settings.xml
@@ -84,9 +84,10 @@
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
         android:layout_marginTop="35dp"
+        android:enabled="false"
         app:strokeColor="@color/white"
         app:cornerRadius="30dp"
-        android:id="@+id/button_cocktail_EF"
+        android:id="@+id/button_save_profile_settings"
         android:text="Save"
         android:textAllCaps="false"
         android:textStyle="bold"
