--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -18,7 +18,8 @@
             app:destination="@id/loginFragment" />
         <action
             android:id="@+id/action_entryFragment_to_mainActivity2"
-            app:destination="@id/mainActivity2" />
+            app:destination="@id/mainActivity2"
+            app:popUpToInclusive="false" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
@@ -36,7 +37,8 @@
         tools:layout="@layout/fragment_register" >
         <action
             android:id="@+id/action_registerFragment_to_mainActivity2"
-            app:destination="@id/mainActivity2" />
+            app:destination="@id/mainActivity2"
+            app:popUpToInclusive="false" />
     </fragment>
     <activity
         android:id="@+id/mainActivity2"
