--- a/app/src/main/res/layout/card_home_fragment_layout.xml
+++ b/app/src/main/res/layout/card_home_fragment_layout.xml
@@ -6,13 +6,21 @@
 
     app:cardUseCompatPadding="true"
     app:cardCornerRadius="15dp"
-    android:id="@+id/card_view">
+    android:id="@+id/card_view"
+    android:background="#1E2E2A"
+    android:layout_marginBottom="15dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:orientation="horizontal"
-        android:background="#CCC8C8"
+        android:background="#49756B"
+
+
+        >
+
+
+
 
 
         >
@@ -39,7 +47,7 @@
                 android:text="Name"
                 android:textStyle="bold"
                 android:textSize="20sp"
-                android:textColor="#535252"/>
+                android:textColor="#E1D445"/>
 
             <TextView
                 android:id="@+id/cocktail_category"
@@ -47,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:text="C_Native Name"
                 android:textSize="14sp"
-                android:textColor="#807D7D"/>
+                android:textColor="#E4DE9B"/>
 
 
         </LinearLayout>
