--- a/app/src/main/res/layout/fragment_cocktail_detail.xml
+++ b/app/src/main/res/layout/fragment_cocktail_detail.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background4"
+    android:background="@drawable/cocktail_detail3"
     android:orientation="vertical"
-    tools:context=".cocktailDetailFragment">
+    tools:context=".ui.cocktailDetailFragment">
 
 
     <TextView
@@ -18,41 +18,12 @@
         android:gravity="center"
         android:text="Name"
         android:textColor="@color/white"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+
+        />
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:paddingBottom="10dp">
 
-        <ImageView
-            android:id="@+id/iv_image"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_gravity="center"
-
-            android:layout_marginTop="30dp"
-            tools:src="@tools:sample/avatars"
-
-
-            />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:src="@drawable/ic_baseline_favorite_24"
-            android:layout_marginLeft="30dp"
-            android:backgroundTint="@color/white"/>
-
-
-    </LinearLayout>
 
 
     <ScrollView
@@ -64,6 +35,40 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingBottom="10dp">
+
+                <ImageView
+                    android:id="@+id/iv_image"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginTop="30dp"
+                    tools:src="@tools:sample/avatars"
+                    android:alpha="0.7"
+
+                    />
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/floatingActionButton2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:src="@drawable/ic_baseline_favorite_24"
+                    android:layout_marginLeft="30dp"
+                    android:backgroundTint="@color/white"/>
+
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
