--- a/app/src/main/res/layout/fragment_entry.xml
+++ b/app/src/main/res/layout/fragment_entry.xml
@@ -4,16 +4,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".entryFragment"
+    tools:context=".ui.entryFragment"
     android:orientation="vertical"
-    android:background="@drawable/background4" >
+    android:background="@drawable/entert_photo"
+    >
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/logo1"
-        android:layout_gravity="center"
-        android:layout_marginTop="40dp" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="cursive"
+        android:gravity="center"
+        android:text="__LUX COCKTAIL__ "
+        android:textColor="@color/white"
+        android:layout_marginTop="15dp"
+
+        android:textSize="35sp" />
 
     <com.google.android.material.button.MaterialButton
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
@@ -23,7 +28,7 @@
         android:padding="10dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="300dp"
         app:strokeColor="@color/white"
         app:cornerRadius="30dp"
         android:id="@+id/button_cocktail_EF"
@@ -31,8 +36,8 @@
         android:textAllCaps="false"
         android:textStyle="bold"
         app:iconGravity="textStart"
-        app:iconTint="@color/teal_700"
-        android:textColor="@color/teal_700"
+        app:iconTint="@color/white"
+        android:textColor="@color/white"
         android:textSize="20sp"/>
 
     <com.google.android.material.button.MaterialButton
@@ -51,8 +56,8 @@
         android:textAllCaps="false"
         android:textStyle="bold"
         app:iconGravity="textStart"
-        app:iconTint="@color/teal_700"
-        android:textColor="@color/teal_700"
+        app:iconTint="@color/white"
+        android:textColor="@color/white"
         android:textSize="20sp"/>
 
     <com.google.android.material.button.MaterialButton
@@ -71,8 +76,8 @@
         android:textAllCaps="false"
         android:textStyle="bold"
         app:iconGravity="textStart"
-        app:iconTint="@color/teal_700"
-        android:textColor="@color/teal_700"
+        app:iconTint="@color/white"
+        android:textColor="@color/white"
         android:textSize="20sp"/>
 
 </LinearLayout>
