--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/entryFragment"
-        android:name="com.example.cocktailbar.entryFragment"
+        android:name="com.example.cocktailbar.ui.entryFragment"
         android:label="fragment_entry"
         tools:layout="@layout/fragment_entry" >
         <action
@@ -23,7 +23,7 @@
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.example.cocktailbar.loginFragment"
+        android:name="com.example.cocktailbar.ui.loginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
