--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="yellow">#A29D96</color>
+    <color name="yellow">#E6D841</color>
     <color name="red">#DC1010</color>
     <color name="clear" ></color>
+    <color name="yellowG">#0A0F0E</color>
 </resources>
