--- a/app/src/main/res/layout/fragment_cocktail_detail.xml
+++ b/app/src/main/res/layout/fragment_cocktail_detail.xml
@@ -51,7 +51,7 @@
                     android:layout_gravity="center"
                     android:layout_marginLeft="40dp"
                     android:layout_marginTop="30dp"
-                    tools:src="@tools:sample/avatars"
+                    tools:src="@drawable/def_pic"
                     android:alpha="0.7"
 
                     />
